# mifc

./: .cruft.json  .env.public  .gitignore  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NEWS.md  README.md  about.yaml  index.html  mkdocs.yml  project.Makefile  pyproject.toml  sitemap.xml
AnalyticalMeasurementMethod/: index.html
Boolean/: index.html
Component/: index.html
CompoundAnalyticalMeasurementMethod/: index.html
Container/: index.html
CountryCode/: index.html
Curie/: index.html
Date/: index.html
DateOrDatetime/: index.html
Datetime/: index.html
Decimal/: index.html
Double/: index.html
Float/: index.html
Food/: index.html
FoodAcquisitionLocationType/: index.html
FoodCollection/: index.html
FoodCookingMethod/: index.html
FoodPreparationState/: index.html
FoodPreservationState/: index.html
FoodRipenessState/: index.html
FoodStorageTemperatureState/: index.html
Integer/: index.html
Jsonpath/: index.html
Jsonpointer/: index.html
NamedThing/: index.html
Ncname/: index.html
Nodeidentifier/: index.html
Objectidentifier/: index.html
PersonStatus/: index.html
Provenance/: index.html
RecommendedSubset/: index.html
Resource/: index.html
ResourceMIFCVersionTag/: index.html
ResourceVersionTag/: index.html
SkosMatchType/: index.html
Sparqlpath/: index.html
String/: index.html
Time/: index.html
Uri/: index.html
Uriorcurie/: index.html
about/: index.html
age_in_years/: index.html
analytical_analysis_measurement_method/: index.html
birth_date/: index.html
foods/: index.html
(+370 files in other folders)
