[tool.poetry]
name = "mifc"
version = "0.0.0.post62.dev0+aa92aef"
description = "A minimum information standard checklist formalizing the description of food composition data and related metadata."
authors = ["Kai Blumberg <kblumberg@email.arizona.edu>"]
license = "MIT"
readme = "README.md"
include = ["README.md", "src/mifc/schema", "project"]

[tool.poetry.dependencies]
python = "^3.9"
linkml-runtime = "^1.1.24"
cruft = "^2.15.0"

[tool.poetry-dynamic-versioning]
enable = false
vcs = "git"
style = "pep440"

[tool.poetry.dev-dependencies]
linkml = "^1.3.5"
mkdocs-material = "^8.2.8"
mkdocs-mermaid2-plugin = "^0.6.0"
schemasheets = "^0.1.14"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.extras]
docs = ["linkml", "mkdocs-material"]